tests/paczka1/small_fuzzy/56122009.err
Error in line 6: COPXdB S767 30,4
Error in line 9: euJw0rcM A56 32,4
Error in line 11: IDrk0vIqcU S802 34,3
